@@ -1,3 +1,6 @@
+- localedrake:
+  o install scim-bridge-qt4 if KDE4 is installed
+
 Version 10.4.197 - 15 September 2007, by Thierry Vignaud
 
 - diskdrake:
